kubernetes/apps/network/authentik/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: external.haynesops
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.haynesops.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: authentik-server
          port: 80
          namespace: authentik
      middlewares:
        - name: authentik-middleware
  tls:
    secretName: certificate-haynesops
